fixed alignment in styleAdult

--- a/styleAdult.css
+++ b/styleAdult.css
@@ -15,6 +15,12 @@ h2 {
 
 }
 
+h3 {
+	text-align: justify;
+	margin-left: 15px;
+	margin-right: 15px;	
+}
+
 p {
 	margin-left: 50px;
 	margin-right: 600px;
@@ -30,7 +36,6 @@ body {
 	font-family: 'Vollkorn', serif;
 	font-size: 16px;
 	text-shadow: 1px 1px 1px black; 
-
 	background-color: #262826;
 	height: auto;
 	width: auto;
@@ -165,7 +170,7 @@ body {
 
 #layer31{
 	height: 50%;
-	width: 50%; 
+	width: 52%; 
 	float: left;	
 }
 
@@ -190,7 +195,7 @@ body {
 #layer5 {
 
 	height: 50%;
-	width: 50%; 
+	width: 52%; 
 	float: left;	
 }
 
