--- a/styleAdultMobile.css
+++ b/styleAdultMobile.css
@@ -18,6 +18,13 @@ h2 {
 
 }
 
+
+h3 {
+	text-align: justify;
+	margin-left: 15px;
+	margin-right: 15px;	
+}
+
 p {
 	margin-left: 50px;
 	margin-right: 600px;
